--- a/w3_html_+_css_lab/index.html
+++ b/w3_html_+_css_lab/index.html
@@ -104,21 +104,21 @@
     <div class="comments-div">
         <div class="first-comment">
             <hr>
-            <img src="no_pic.jpeg" alt="default user profule picture">
+            <img src="no_pic.jpeg" alt="default user profile picture">
             <h4>Username</h4>
             <h5>Posted: 23/03/2020</h5>
             <p>This was interesting. Thanks</p>
             <hr>
         </div>
         <div class="second-comment">
-            <img src="no_pic.jpeg" alt="default user profule picture">
+            <img src="no_pic.jpeg" alt="default user profile picture">
             <h4>Username</h4>
             <h5>Posted: 25/03/2020</h5>
             <p>This was interesting. Thanks</p>
             <hr>
         </div>
         <div class="third-comment">
-            <img src="no_pic.jpeg" alt="default user profule picture">
+            <img src="no_pic.jpeg" alt="default user profile picture">
             <h4>Username</h4>
             <h5>Posted: 26/03/2020</h5>
             <p>Thanks. I hate it</p>
