add watchlist, details, movers, and css effects

--- a/w7_stocks/public/index.html
+++ b/w7_stocks/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-pcJWs4Bl4Q6/tjFO6+lFKZ96JAGU+b+NflXp+dMzF6kmjr17woLJgrm4Q4YmzZ6UoJ6ELavB/p9/oh+LHkxnQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>React App</title>
   </head>
   <body>
